pricing card background issue on mobile view fixed

--- a/src/components/staticPages/feature/Feature.css
+++ b/src/components/staticPages/feature/Feature.css
@@ -48,7 +48,6 @@
   color: #2c2c2c;
   text-align: center;
   margin-top: 30px;
-  filter: drop-shadow(2px 4px 50px rgba(0, 0, 0, 0.1));
 }
 .subHeading {
   margin: 0;
